# iFilter4Archives

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  iFilter4Archives.cpp  iFilter4Archives.def  iFilter4Archives.rc
archive/: CMakeLists.txt  Factory.cpp  Factory.hpp  Format.cpp  Format.hpp  Module.cpp  Module.hpp
com/: CMakeLists.txt  CachedChunk.cpp  CachedChunk.hpp  ClassFactory.cpp  ClassFactory.hpp  FileDescription.cpp  FileDescription.hpp  Filter.cpp  Filter.hpp  ItemTask.cpp  ItemTask.hpp  Registrar.cpp  Registrar.hpp
installer/: 7-Zip.de-de.wxl  7-Zip.en-us.wxl  7-Zip.wixproj  7-Zip.wxs
native/: CMakeLists.txt  com.cpp  com.hpp  object.cpp  object.hpp  pimpl.hpp  registry.cpp  registry.hpp  settings.cpp  settings.hpp  sevenzip.hpp  win32.cpp  win32.hpp
streams/: BridgeStream.cpp  BridgeStream.hpp  CMakeLists.txt  FileBuffer.cpp  FileBuffer.hpp  ReadStream.cpp  ReadStream.hpp  ReadStreams.cpp  ReadStreams.hpp  WriteStream.cpp  WriteStream.hpp  WriteStreams.cpp  WriteStreams.hpp
